--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ header, main, section, article, aside, footer {
 /* 背景图自适应 */
 .top-image {
   width: 100%;
-  height: 240px;
+
   object-fit: cover;
 }
 
@@ -50,18 +50,6 @@ header, main, section, article, aside, footer {
 
 }
 
-
-
-
-.page-header span{
-  font-size: 9px; /* 小标签文字大小，可按需调整 */
-  padding: 4px 8px; /* 内边距，控制小标签的大小 */
-  border-radius: 120px; /* 圆角，让小标签更美观 */
-  margin-left: 10px; /* 与主文字的间距 */
-  font-weight: 400; /* 调整小标签文字加粗程度，与主文字区分 */
-  background-color: #000;
-  
-}
 
 /* 实现左右分栏布局 */
  /* 给主容器加 Flex 布局 */
@@ -112,18 +100,21 @@ display: flex; /* 新增：让内部元素垂直占满 */
     background-color: white;
     width: 100px;
     height: 100px;
+
     display: flex;
   justify-content: center; /* 水平居中 */
   align-items: center;     /* 垂直居中 */
   border-radius: 8px; /* 圆角，让页面更柔和 */
 }
 
+
+
 .product-card img {
   width:auto; 
   height:auto;
    max-width: 100%; /* 避免图片超出父容器宽度 */
   max-height: 100%;/* 避免图片超出父容器高度 */
-
+ object-fit: contain; /* 保持比例，完整显示图片 */
 }
 
 .product-info {
@@ -141,27 +132,6 @@ display: flex; /* 新增：让内部元素垂直占满 */
   color: #666;
 }
 
-/* 右上角价格 */
-.price-top-right {
-  position: absolute;
-  top: 10px;   /* 距离顶部 */
-  right: 15px; /* 距离右侧 */
-  font-weight: 700;
-
-  padding: 5px 10px;
-  border-radius: 4px;
-  background-color: #E5E7EB;
-}
-
-/* 右下角删除按钮 */
-.close-btn{
-  position: absolute;
-  bottom: 10px; /* 距离底部 */
-  right: 15px;  /* 距离右侧 */
-  background-color: #E5E7EB;
-  border: none;
-  font-size: 20px;
-}
 
 .thin-line {
   /* 核心：1px 浅灰色实线 */
